# dechat

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md  build.bat
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: deploy.yml
crates/dechat-core/: Cargo.toml
crates/dechat-core/src/: keys.rs  message.rs  session.rs  signal.rs
crates/dechat-wasm/: Cargo.toml
crates/dechat-wasm/src/: lib.rs
crates/sealedchat-core/: Cargo.toml
crates/sealedchat-core/src/: keys.rs  lib.rs  session.rs
crates/sealedchat-wasm/: Cargo.toml
crates/sealedchat-wasm/src/: lib.rs
web/: index.html  manifest.json  sw.js
web/css/: style.css
web/js/: app.js  encoding.js  password.js  qrcode.min.js  room.js  storage.js  video.js
