[package]
name = "dechat-core"
version = "0.1.0"
edition = "2021"

[dependencies]
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "js"] }
zeroize = { version = "1", features = ["derive"] }
thiserror = "2"
hex = "0.4"
