[package]
name = "dechat-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dechat-core = { path = "../dechat-core" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "IdbFactory",
    "IdbDatabase",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbObjectStore",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbKeyRange",
    "console",
    "Crypto",
    "SubtleCrypto",
    "CryptoKey",
]
